# moto

./: .gitignore  .specd  AGENTS.md  Cargo.toml  Makefile  README.md  bookkeeping-prompt.md  discovery-prompt.md  docker-compose.test.yml  docker-compose.yml  flake.nix  loop.sh  plan-prompt.md  planning_prompt.md  prompt.md  seed-prompt.md  specd_history.md  specd_review.md  specd_work_list.md  tracks-history.md  tracks.md  visualize.sh  working_tracks.md
.cargo/: config.toml
.claude/: settings.local.json
.githooks/: pre-commit
crates/moto-ai-proxy/: Cargo.toml  bike.toml
crates/moto-ai-proxy/src/: audit.rs  auth.rs  config.rs  health.rs  keys.rs  lib.rs  main.rs  provider.rs  proxy.rs  proxy_test.rs
crates/moto-ai-proxy/src/translate/: anthropic.rs  mod.rs
crates/moto-ai-proxy/tests/: smoke_test.rs
crates/moto-audit-types/: Cargo.toml
crates/moto-audit-types/src/: event.rs  event_test.rs  lib.rs
crates/moto-cli/: Cargo.toml
crates/moto-cli-wgtunnel/: Cargo.toml
crates/moto-cli-wgtunnel/src/: client.rs  enter.rs  lib.rs  status.rs  ttyd.rs  tunnel.rs
crates/moto-cli/src/: bike.rs  cli.rs  config.rs  error.rs  main.rs  names.rs
crates/moto-cli/src/commands/: bike.rs  cluster.rs  dev.rs  garage.rs  mod.rs
crates/moto-club/: Cargo.toml  bike.toml
crates/moto-club-api/: Cargo.toml
crates/moto-club-api/src/: audit.rs  audit_test.rs  events_ws.rs  garages.rs  health.rs  lib.rs  logs_ws.rs  metrics.rs  postgres_stores.rs  wg.rs  wg_test.rs
crates/moto-club-db/: Cargo.toml
crates/moto-club-db/migrations/: 20260128000000_initial_schema.sql  20260128000001_derp_servers_unique_constraint.sql  20260205000000_drop_derp_servers.sql  20260309000000_audit_log.sql  20260311000000_audit_writer_role.sql
crates/moto-club-db/src/: audit_repo.rs  derp_server_repo.rs  garage_repo.rs  garage_repo_test.rs  lib.rs  models.rs  user_ssh_key_repo.rs  wg_device_repo.rs  wg_device_repo_test.rs  wg_garage_repo.rs  wg_garage_repo_test.rs  wg_session_repo.rs  wg_session_repo_test.rs
crates/moto-club-garage/: Cargo.toml
crates/moto-club-garage/src/: keybox.rs  lib.rs  lifecycle.rs  service.rs
crates/moto-club-k8s/: Cargo.toml
crates/moto-club-k8s/src/: lib.rs  limit_range.rs  namespace.rs  network_policy.rs  pods.rs  pods_test.rs  pvc.rs  resource_quota.rs  secrets.rs  supporting_services.rs  svid.rs  wireguard.rs
crates/moto-club-reconcile/: Cargo.toml
crates/moto-club-reconcile/src/: garage.rs  leader_elector.rs  lib.rs
crates/moto-club-types/: Cargo.toml
crates/moto-club-types/src/: garage.rs  lib.rs
crates/moto-club-wg/: Cargo.toml
crates/moto-club-wg/src/: broadcaster.rs  derp.rs  ipam.rs  lib.rs  peers.rs  sessions.rs  ssh_keys.rs
crates/moto-club-ws/: Cargo.toml
crates/moto-club-ws/src/: events.rs  lib.rs  logs.rs  peers.rs
crates/moto-club/src/: main.rs
crates/moto-common/: Cargo.toml
crates/moto-common/src/: error.rs  lib.rs  secret.rs
crates/moto-garage/: Cargo.toml
crates/moto-garage-wgtunnel/: Cargo.toml
crates/moto-garage-wgtunnel/src/: daemon.rs  health.rs  lib.rs  register.rs  ssh.rs
crates/moto-garage/src/: client.rs  error.rs  lib.rs  mode.rs
crates/moto-k3s/: Cargo.toml
crates/moto-k3s/src/: client.rs  lib.rs  namespace.rs
crates/moto-k8s/: Cargo.toml
crates/moto-k8s/src/: client.rs  deployment.rs  error.rs  labels.rs  lib.rs  limit_range.rs  namespace.rs  network_policy.rs  pod.rs  pvc.rs  rbac.rs  resource_quota.rs  token_review.rs
crates/moto-keybox/: Cargo.toml
crates/moto-keybox-cli/: Cargo.toml
crates/moto-keybox-cli/src/: cli.rs  error.rs  main.rs
crates/moto-keybox-cli/src/commands/: init.rs  issue_dev_svid.rs  mod.rs  secrets.rs
crates/moto-keybox-client/: Cargo.toml
crates/moto-keybox-client/src/: client.rs  error.rs  lib.rs  svid_cache.rs
crates/moto-keybox-db/: Cargo.toml
crates/moto-keybox-db/migrations/: 20260127000000_initial_schema.sql  20260309000001_audit_log_unified_schema.sql  20260311000000_audit_writer_role.sql
crates/moto-keybox-db/src/: audit_repo.rs  audit_repo_test.rs  lib.rs  models.rs  secret_repo.rs  secret_repo_test.rs
crates/moto-keybox-server/: Cargo.toml  bike.toml
crates/moto-keybox-server/src/: main.rs
crates/moto-keybox/src/: abac.rs  api.rs  api_test.rs  crypto.rs  db.rs  envelope.rs  error.rs  health.rs  lib.rs  main.rs  pg_api.rs  pg_repository.rs  repository.rs  svid.rs  types.rs
crates/moto-test-utils/: Cargo.toml
crates/moto-test-utils/src/: lib.rs
crates/moto-throttle/: Cargo.toml
crates/moto-throttle/src/: config.rs  layer.rs  layer_test.rs  lib.rs  token_bucket.rs  token_bucket_test.rs
crates/moto-wgtunnel-conn/: Cargo.toml
crates/moto-wgtunnel-conn/src/: endpoint.rs  lib.rs  magic.rs  path.rs  stun.rs
crates/moto-wgtunnel-derp/: Cargo.toml
crates/moto-wgtunnel-derp/src/: client.rs  lib.rs  map.rs  protocol.rs
crates/moto-wgtunnel-engine/: Cargo.toml
crates/moto-wgtunnel-engine/src/: config.rs  lib.rs  tunnel.rs
crates/moto-wgtunnel-engine/src/platform/: linux.rs  macos.rs  mod.rs
crates/moto-wgtunnel-types/: Cargo.toml
crates/moto-wgtunnel-types/src/: derp.rs  ip.rs  keys.rs  lib.rs  peer.rs
docs/: _Footer.md  _Sidebar.md  ai-proxy.md  architecture.md  components.md  deployment.md  garage-startup-steps.md  getting-started.md  home.md  security.md
infra/: smoke-test-ai-proxy.sh  smoke-test-bike.sh  smoke-test-garage.sh  smoke-test-keybox.sh  smoke-test.sh  test-init-db.sql
scripts/: generate-manifests.sh  init-dev-db.sql
specs/: README.md  ai-proxy.md  audit-logging.md  bike.md  bug-fix.md  compliance.md  container-system.md  dev-container.md  docs.md  garage-isolation.md  garage-lifecycle.md  garage-local.md  jj-workflow.md  k3s-cluster.md  key-management.md  keybox.md  local-cluster.md  local-dev.md  makefile.md  moto-bike.md  moto-cli.md  moto-club-websocket.md  moto-club.md  moto-cron.md  moto-throttle.md  moto-wgtunnel.md  nix-removal.md  pre-commit.md  project-structure.md  proxy-architecture.md  route-configuration.md  rust-workspace.md  service-deploy.md  supporting-services.md  testing.md  token-format.md  (+3 more)
(+27 files in other folders)
