[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Moto Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/moto-dev/moto"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.8"

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Errors
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Testing
proptest = "1"

# Internal crates
moto-common = { path = "crates/moto-common" }
moto-club-types = { path = "crates/moto-club-types" }
moto-k3s = { path = "crates/moto-k3s" }
moto-garage = { path = "crates/moto-garage" }
moto-cli = { path = "crates/moto-cli" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
