[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Moto Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/moto-dev/moto"
rust-version = "1.85"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"

# Web framework
axum = "0.8"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Filesystem
dirs = "6"

# Errors
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1", features = ["v7", "serde"] }

# Random
rand = "0.9"

# Crypto
ed25519-dalek = { version = "2", features = ["rand_core"] }
aes-gcm = "0.10"
base64 = "0.22"
secrecy = "0.10"

# Testing
proptest = "1"
tokio-test = "0.4"

# Internal crates
moto-common = { path = "crates/moto-common" }
moto-club-types = { path = "crates/moto-club-types" }
moto-k8s = { path = "crates/moto-k8s" }
moto-garage = { path = "crates/moto-garage" }
moto-cli = { path = "crates/moto-cli" }
moto-wgtunnel-types = { path = "crates/moto-wgtunnel-types" }
moto-wgtunnel-derp = { path = "crates/moto-wgtunnel-derp" }
moto-wgtunnel-conn = { path = "crates/moto-wgtunnel-conn" }
moto-wgtunnel-engine = { path = "crates/moto-wgtunnel-engine" }
moto-cli-wgtunnel = { path = "crates/moto-cli-wgtunnel" }
moto-club-wg = { path = "crates/moto-club-wg" }
moto-club-db = { path = "crates/moto-club-db" }
moto-club-api = { path = "crates/moto-club-api" }
moto-club-k8s = { path = "crates/moto-club-k8s" }
moto-garage-wgtunnel = { path = "crates/moto-garage-wgtunnel" }
moto-club-garage = { path = "crates/moto-club-garage" }
moto-club-reconcile = { path = "crates/moto-club-reconcile" }
moto-keybox = { path = "crates/moto-keybox" }
moto-keybox-client = { path = "crates/moto-keybox-client" }
moto-keybox-cli = { path = "crates/moto-keybox-cli" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
