[package]
name = "moto-ai-proxy"
description = "AI provider reverse proxy — injects API credentials from keybox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "moto-ai-proxy"
path = "src/main.rs"

[dependencies]
axum.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
futures-util.workspace = true
moto-audit-types.workspace = true
moto-keybox-client.workspace = true
moto-throttle.workspace = true
reqwest = { workspace = true, features = ["stream"] }
secrecy.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["json"] }
uuid.workspace = true

[dev-dependencies]
futures-util.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tower.workspace = true

[lints]
workspace = true
