[package]
name = "moto-club-api"
description = "REST API handlers for moto-club"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
# Async runtime
tokio = { workspace = true }

# WebSocket
futures-util = { workspace = true }

# Web framework
axum = { workspace = true, features = ["ws"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Errors
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Metrics
metrics = { workspace = true }

# HTTP middleware (for metrics middleware)
tower = { workspace = true }

# Database
sqlx = { workspace = true }

# Random name generation
rand = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# HTTP client for health checks
reqwest = { workspace = true }

# URL parsing
url = { workspace = true }

# Internal crates
moto-club-db = { workspace = true }
moto-club-garage = { workspace = true }
moto-club-k8s = { workspace = true }
moto-club-types = { workspace = true }
moto-club-wg = { workspace = true }
moto-club-ws = { workspace = true }
moto-k8s = { workspace = true }
moto-wgtunnel-types = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
