[package]
name = "moto-club-db"
description = "Database layer for moto-club: models and repositories"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
moto-club-types.workspace = true

chrono.workspace = true
serde.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
