[package]
name = "moto-club-db"
description = "Database layer for moto-club: models and repositories"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
integration = []

[dependencies]
moto-club-types.workspace = true

chrono.workspace = true
serde.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
moto-test-utils.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
