[package]
name = "moto-club-k8s"
description = "Kubernetes interactions for moto-club: namespace, pod, and resource management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
moto-club-types.workspace = true
moto-k8s.workspace = true
moto-wgtunnel-types.workspace = true

chrono.workspace = true
k8s-openapi.workspace = true
kube.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
