[package]
name = "moto-club-reconcile"
description = "K8s to database reconciliation for moto-club"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
moto-club-types.workspace = true
moto-club-db.workspace = true
moto-club-k8s.workspace = true
moto-club-ws.workspace = true
moto-k8s.workspace = true

chrono.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio-test.workspace = true

[lints]
workspace = true
