[package]
name = "moto-club-types"
description = "Shared types between CLI and server: GarageId, GarageState, GarageInfo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
