[package]
name = "moto-club-wg"
description = "Server-side WireGuard coordination: peer registration, IP allocation, sessions"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
moto-wgtunnel-types.workspace = true

chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test.workspace = true

[lints]
workspace = true
