[package]
name = "moto-common"
description = "Shared utilities: errors, config, Secret<T> wrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
