[package]
name = "moto-garage-wgtunnel"
description = "Garage-side WireGuard daemon: registration, tunnel management, SSH integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
moto-wgtunnel-engine.workspace = true
moto-wgtunnel-types.workspace = true

axum.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
tokio-test.workspace = true

[lints]
workspace = true
