[package]
name = "moto-keybox-cli"
description = "CLI for keybox secrets management"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "moto-keybox"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
moto-keybox.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
serde.workspace = true
serde_json.workspace = true
base64.workspace = true

[dev-dependencies]
tempfile = "3"
