[package]
name = "moto-keybox"
description = "Secrets manager with SPIFFE-inspired identity and ABAC"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
integration = []

[dependencies]
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
ed25519-dalek.workspace = true
aes-gcm.workspace = true
base64.workspace = true
serde_json.workspace = true
getrandom = "0.3"
axum.workspace = true
tokio.workspace = true
subtle.workspace = true
moto-keybox-db = { path = "../moto-keybox-db" }

[dev-dependencies]

[lints]
workspace = true
