[package]
name = "moto-test-utils"
description = "Shared test utilities for moto integration tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
tokio = { workspace = true, features = ["sync"] }
uuid.workspace = true
base64.workspace = true
rand.workspace = true

[lints]
workspace = true
