[package]
name = "moto-wgtunnel-engine"
description = "WireGuard engine for moto tunnels (boringtun userspace implementation)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
moto-wgtunnel-types.workspace = true
moto-wgtunnel-conn.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# WireGuard implementation
boringtun = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true

[lints]
workspace = true
