[package]
name = "moto-wgtunnel-engine"
description = "WireGuard engine for moto tunnels (boringtun userspace implementation)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
moto-wgtunnel-types.workspace = true
moto-wgtunnel-conn.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# WireGuard implementation
boringtun = "0.7"

# Platform-specific TUN support
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde_json.workspace = true

# Override workspace lints - this crate requires unsafe for platform TUN code.
# TUN device operations require system calls (ioctl) that cannot be done in safe Rust.
[lints.rust]
unsafe_code = "warn"  # Allow unsafe for platform-specific TUN ioctls
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
